--- a/databases/Makefile
+++ b/databases/Makefile
@@ -914,6 +914,7 @@
     SUBDIR += rubygem-activemodel61
     SUBDIR += rubygem-activemodel70
     SUBDIR += rubygem-activemodel71
+    SUBDIR += rubygem-activemodel72
     SUBDIR += rubygem-activerecord-explain-analyze
     SUBDIR += rubygem-activerecord-import
     SUBDIR += rubygem-activerecord-jdbc-adapter
