--- a/databases/Makefile
+++ b/databases/Makefile
@@ -929,6 +929,7 @@
     SUBDIR += rubygem-activerecord61
     SUBDIR += rubygem-activerecord70
     SUBDIR += rubygem-activerecord71
+    SUBDIR += rubygem-activerecord72
     SUBDIR += rubygem-after_commit_queue
     SUBDIR += rubygem-amalgalite
     SUBDIR += rubygem-arel
