--- a/databases/Makefile
+++ b/databases/Makefile
@@ -1043,6 +1043,7 @@
     SUBDIR += rubygem-sdbm
     SUBDIR += rubygem-seed-fu
     SUBDIR += rubygem-solid_cable
+    SUBDIR += rubygem-solid_cache
     SUBDIR += rubygem-sqlite3
     SUBDIR += rubygem-sqlite3-ruby
     SUBDIR += rubygem-sqlite31
