--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7317,6 +7317,7 @@
     SUBDIR += rubygem-jbuilder-rails60
     SUBDIR += rubygem-jbuilder-rails61
     SUBDIR += rubygem-jbuilder-rails71
+    SUBDIR += rubygem-jbuilder-rails72
     SUBDIR += rubygem-jekyll-coffeescript
     SUBDIR += rubygem-jenkins_api_client
     SUBDIR += rubygem-jeweler
