--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7756,6 +7756,7 @@
     SUBDIR += rubygem-sprockets-rails-rails61
     SUBDIR += rubygem-sprockets-rails-rails70
     SUBDIR += rubygem-sprockets-rails-rails71
+    SUBDIR += rubygem-sprockets-rails-rails72
     SUBDIR += rubygem-sprockets-sass
     SUBDIR += rubygem-sprockets2
     SUBDIR += rubygem-sprockets3
