--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	24.2-branchpoint-2516
-DISTVERSIONSUFFIX=	-g5450306a363
+DISTVERSION=	24.2-branchpoint-2708
+DISTVERSIONSUFFIX=	-g55260d7729e
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
