--- a/www/gitlab/Makefile
+++ b/www/gitlab/Makefile
@@ -32,7 +32,7 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	gitlab-elasticsearch-indexer>=5.2.0:textproc/gitlab-elasticsearch-indexer \
 	gitlab-agent>=${GITLAB_VERSION}:net/gitlab-agent \
 	gitlab-pages>=${GITLAB_VERSION}:www/gitlab-pages \
-	gitlab-shell>=14.38.0:devel/gitlab-shell \
+	gitlab-shell>=14.39.0:devel/gitlab-shell \
 	gitlab-workhorse>=${GITLAB_VERSION}:www/gitlab-workhorse \
 	redis>=6.2.11:databases/redis \
 	yarn${NODEJS_SUFFIX}>=1.10.0:www/yarn${NODEJS_SUFFIX} \
@@ -48,7 +48,7 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-responders-rails70>=3.0<4.0:www/rubygem-responders-rails70 \
 	rubygem-sprockets3>=3.7.0<3.8:devel/rubygem-sprockets3 \
 	rubygem-sprockets-rails-rails70>=3.5.1<3.6:devel/rubygem-sprockets-rails-rails70 \
-	rubygem-view_component-rails70>=3.13.0<3.14:devel/rubygem-view_component-rails70 \
+	rubygem-view_component-rails70>=3.14.0<3.15:devel/rubygem-view_component-rails70 \
 	rubygem-pg>=1.5.6<1.6:databases/rubygem-pg \
 	rubygem-neighbor>=0.3.2<0.4:databases/rubygem-neighbor \
 	rubygem-rugged>=1.6<2:devel/rubygem-rugged \
@@ -90,7 +90,7 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-acme-client>=2.0.18<3:security/rubygem-acme-client \
 	rubygem-browser5>=5.3.1<5.4:www/rubygem-browser5 \
 	rubygem-ohai>=18.1<19:sysutils/rubygem-ohai \
-	rubygem-gpgme>=2.0.23<2.1.0:security/rubygem-gpgme \
+	rubygem-gpgme>=2.0.24<2.1.0:security/rubygem-gpgme \
 	rubygem-gitlab_omniauth-ldap>=2.2.0<2.3.0:net/rubygem-gitlab_omniauth-ldap \
 	rubygem-net-ldap017>=0.17.1<0.18:net/rubygem-net-ldap017 \
 	rubygem-grape20>=2.0.0<2.1:devel/rubygem-grape20 \
@@ -99,7 +99,7 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-grape-swagger-entity>=0.5.1<0.6:devel/rubygem-grape-swagger-entity \
 	rubygem-grape-path-helpers>=2.0.1<2.1:devel/rubygem-grape-path-helpers \
 	rubygem-rack-cors>=2.0.1<2.1:www/rubygem-rack-cors \
-	rubygem-graphql>=2.3.5<2.4:devel/rubygem-graphql \
+	rubygem-graphql>=2.3.14<2.4:devel/rubygem-graphql \
 	rubygem-graphiql-rails>=1.10<1.11:devel/rubygem-graphiql-rails \
 	rubygem-apollo_upload_server>=2.1.6<2.2:net/rubygem-apollo_upload_server \
 	rubygem-graphlient>=0.8.0<0.9:devel/rubygem-graphlient \
@@ -109,12 +109,12 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-hamlit>=2.15.0<2.16:www/rubygem-hamlit \
 	rubygem-carrierwave1>=1.3.4<2.0:www/rubygem-carrierwave1 \
 	rubygem-mini_magick4>=4.12<5:graphics/rubygem-mini_magick4 \
-	rubygem-fog-aws>=3.18<4:net/rubygem-fog-aws \
+	rubygem-fog-aws>=3.26<4:net/rubygem-fog-aws \
 	rubygem-fog-core210>=2.1.0<2.1.1:devel/rubygem-fog-core210 \
 	rubygem-fog-google>=1.24.1<1.25:net/rubygem-fog-google \
 	rubygem-fog-local>=0.8<1.0:net/rubygem-fog-local \
 	rubygem-fog-aliyun>=0.4<1.0:net/rubygem-fog-aliyun \
-	rubygem-gitlab-fog-azure-rm>=2.0.1<2.1:net/rubygem-gitlab-fog-azure-rm \
+	rubygem-gitlab-fog-azure-rm>=2.1.0<2.2:net/rubygem-gitlab-fog-azure-rm \
 	rubygem-google-apis-storage_v1>=0.29<1:devel/rubygem-google-apis-storage_v1 \
 	rubygem-google-cloud-storage145>=1.45.0<1.46:net/rubygem-google-cloud-storage145 \
 	rubygem-google-apis-core>=0.11.2<2:devel/rubygem-google-apis-core \
@@ -134,9 +134,9 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-elasticsearch-model713>=7.2<8:textproc/rubygem-elasticsearch-model713 \
 	rubygem-elasticsearch-rails7>=7.2<8:textproc/rubygem-elasticsearch-rails7 \
 	rubygem-elasticsearch-api7>=7.17.11<7.18:textproc/rubygem-elasticsearch-api7 \
-	rubygem-aws-sdk-core>=3.201.0<4:devel/rubygem-aws-sdk-core \
+	rubygem-aws-sdk-core>=3.202.0<4:devel/rubygem-aws-sdk-core \
 	rubygem-aws-sdk-cloudformation>=1<2:devel/rubygem-aws-sdk-cloudformation \
-	rubygem-aws-sdk-s3>=1.157.0<2:devel/rubygem-aws-sdk-s3 \
+	rubygem-aws-sdk-s3>=1.159.0<2:devel/rubygem-aws-sdk-s3 \
 	rubygem-faraday-typhoeus>=1.1<2:www/rubygem-faraday-typhoeus \
 	rubygem-faraday_middleware-aws-sigv4>=1.0.1<1.1:devel/rubygem-faraday_middleware-aws-sigv4 \
 	rubygem-typhoeus>=1.4.0<1.5:www/rubygem-typhoeus \
@@ -157,15 +157,15 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-truncato>=0.7.12<0.8.0:textproc/rubygem-truncato \
 	rubygem-tty-prompt>=0.23<1:devel/rubygem-tty-prompt \
 	rubygem-nokogiri>=1.16<2:textproc/rubygem-nokogiri \
-	rubygem-gitlab-glfm-markdown>=0.0.17<0.1:textproc/rubygem-gitlab-glfm-markdown \
-	rubygem-icalendar>=2.10.1<2.11:devel/rubygem-icalendar \
+	rubygem-gitlab-glfm-markdown>=0.0.20<0.1:textproc/rubygem-gitlab-glfm-markdown \
+	rubygem-icalendar>=2.10.2<2.11:devel/rubygem-icalendar \
 	rubygem-diffy>=3.4<4:textproc/rubygem-diffy \
 	rubygem-rack22>=2.2.9,3<2.3,3:www/rubygem-rack22 \
 	rubygem-rack-timeout>=0.7.0<0.8:www/rubygem-rack-timeout \
 	rubygem-puma>=6.4<7:www/rubygem-puma \
 	rubygem-sd_notify>=0.1.1<0.2:devel/rubygem-sd_notify \
 	rubygem-state_machines-activerecord08>=0.8.0<0.9.0:databases/rubygem-state_machines-activerecord08 \
-	rubygem-sidekiq71>=7.1.6<7.2:devel/rubygem-sidekiq71 \
+	rubygem-sidekiq72>=7.2.4<7.3:devel/rubygem-sidekiq72 \
 	rubygem-sidekiq-cron-rails70>=1.12.0<1.13:devel/rubygem-sidekiq-cron-rails70 \
 	rubygem-fugit18>=1.8.1<1.9:devel/rubygem-fugit18 \
 	rubygem-httparty021>=0.21.0<0.22:www/rubygem-httparty021 \
@@ -177,8 +177,8 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-js_regex>=3.8<4.0:textproc/rubygem-js_regex \
 	rubygem-device_detector>=0:devel/rubygem-device_detector \
 	rubygem-redis-namespace>=1.11.0<1.12:databases/rubygem-redis-namespace \
-	rubygem-redis52>=5.2.0<5.3:databases/rubygem-redis52 \
-	rubygem-redis-clustering52>=5.2.0<5.3:databases/rubygem-redis-clustering52 \
+	rubygem-redis>=5.3.0<5.4:databases/rubygem-redis \
+	rubygem-redis-clustering>=5.3.0<5.4:databases/rubygem-redis-clustering \
 	rubygem-connection_pool>=2.4.1<3.0:net/rubygem-connection_pool \
 	rubygem-redis-actionpack-rails70>=5.4.0<5.5:databases/rubygem-redis-actionpack-rails70 \
 	rubygem-discordrb-webhooks>=3.5<4.0:net-im/rubygem-discordrb-webhooks \
@@ -208,9 +208,9 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-base32>=0.3.0<0.4.0:converters/rubygem-base32 \
 	rubygem-gitlab-license>=2.5<3:devel/rubygem-gitlab-license \
 	rubygem-rack-attack>=6.7.0<6.8:www/rubygem-rack-attack \
-	rubygem-sentry-ruby>=5.18.0<5.19:devel/rubygem-sentry-ruby \
-	rubygem-sentry-rails>=5.18.0<5.19:devel/rubygem-sentry-rails \
-	rubygem-sentry-sidekiq>=5.18.0<5.19:devel/rubygem-sentry-sidekiq \
+	rubygem-sentry-ruby>=5.19.0<5.20:devel/rubygem-sentry-ruby \
+	rubygem-sentry-rails>=5.19.0<5.20:devel/rubygem-sentry-rails \
+	rubygem-sentry-sidekiq>=5.19.0<5.20:devel/rubygem-sentry-sidekiq \
 	rubygem-pg_query>=5.1.0<5.2:databases/rubygem-pg_query \
 	rubygem-premailer-rails-rails70>=1.12.0<1.13:mail/rubygem-premailer-rails-rails70 \
 	rubygem-gitlab-labkit>=0.36.0<0.37:devel/rubygem-gitlab-labkit \
@@ -225,29 +225,30 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-webrick>=1.8.1<1.9:www/rubygem-webrick \
 	rubygem-prometheus-client-mmap>=1.1.1<2:devel/rubygem-prometheus-client-mmap \
 	rubygem-async212>=2.12.1<2.13:devel/rubygem-async212 \
-	rubygem-opentelemetry-sdk>=1.4.0:devel/rubygem-opentelemetry-sdk \
+	rubygem-gitlab-security_report_schemas>=0.1.2.min15.0.0.max15.2.0<0.1.2.min15.0.0.max15.2.1:devel/rubygem-gitlab-security_report_schemas \
+	rubygem-opentelemetry-sdk>=1.5.0:devel/rubygem-opentelemetry-sdk \
 	rubygem-opentelemetry-exporter-otlp>=0.26.3:devel/rubygem-opentelemetry-exporter-otlp \
-	rubygem-opentelemetry-instrumentation-active_support>=0.5.1:devel/rubygem-opentelemetry-instrumentation-active_support \
+	rubygem-opentelemetry-instrumentation-active_support>=0.6.0:devel/rubygem-opentelemetry-instrumentation-active_support \
 	rubygem-opentelemetry-instrumentation-action_pack>=0.9.0:devel/rubygem-opentelemetry-instrumentation-action_pack \
-	rubygem-opentelemetry-instrumentation-active_job>=0.7.1:devel/rubygem-opentelemetry-instrumentation-active_job \
-	rubygem-opentelemetry-instrumentation-active_record>=0.7.0:devel/rubygem-opentelemetry-instrumentation-active_record \
-	rubygem-opentelemetry-instrumentation-action_view>=0.7.0:devel/rubygem-opentelemetry-instrumentation-action_view \
-	rubygem-opentelemetry-instrumentation-aws_sdk>=0.5.1:devel/rubygem-opentelemetry-instrumentation-aws_sdk \
-	rubygem-opentelemetry-instrumentation-http>=0.23.2:devel/rubygem-opentelemetry-instrumentation-http \
-	rubygem-opentelemetry-instrumentation-concurrent_ruby>=0.21.2:devel/rubygem-opentelemetry-instrumentation-concurrent_ruby \
-	rubygem-opentelemetry-instrumentation-ethon>=0.21.3:devel/rubygem-opentelemetry-instrumentation-ethon \
-	rubygem-opentelemetry-instrumentation-excon>=0.22.0:devel/rubygem-opentelemetry-instrumentation-excon \
-	rubygem-opentelemetry-instrumentation-faraday>=0.24.0:devel/rubygem-opentelemetry-instrumentation-faraday \
-	rubygem-opentelemetry-instrumentation-grape>=0.1.6:devel/rubygem-opentelemetry-instrumentation-grape \
-	rubygem-opentelemetry-instrumentation-graphql>=0.28.0:devel/rubygem-opentelemetry-instrumentation-graphql \
-	rubygem-opentelemetry-instrumentation-http_client>=0.22.3:devel/rubygem-opentelemetry-instrumentation-http_client \
-	rubygem-opentelemetry-instrumentation-net_http>=0.22.4:devel/rubygem-opentelemetry-instrumentation-net_http \
-	rubygem-opentelemetry-instrumentation-pg>=0.27.1:devel/rubygem-opentelemetry-instrumentation-pg \
-	rubygem-opentelemetry-instrumentation-rack>=0.24.0:devel/rubygem-opentelemetry-instrumentation-rack \
-	rubygem-opentelemetry-instrumentation-rails>=0.30.0:devel/rubygem-opentelemetry-instrumentation-rails \
+	rubygem-opentelemetry-instrumentation-active_job>=0.7.7:devel/rubygem-opentelemetry-instrumentation-active_job \
+	rubygem-opentelemetry-instrumentation-active_record>=0.7.4:devel/rubygem-opentelemetry-instrumentation-active_record \
+	rubygem-opentelemetry-instrumentation-action_view>=0.7.2:devel/rubygem-opentelemetry-instrumentation-action_view \
+	rubygem-opentelemetry-instrumentation-aws_sdk>=0.5.4:devel/rubygem-opentelemetry-instrumentation-aws_sdk \
+	rubygem-opentelemetry-instrumentation-http>=0.23.4:devel/rubygem-opentelemetry-instrumentation-http \
+	rubygem-opentelemetry-instrumentation-concurrent_ruby>=0.21.4:devel/rubygem-opentelemetry-instrumentation-concurrent_ruby \
+	rubygem-opentelemetry-instrumentation-ethon>=0.21.8:devel/rubygem-opentelemetry-instrumentation-ethon \
+	rubygem-opentelemetry-instrumentation-excon>=0.22.4:devel/rubygem-opentelemetry-instrumentation-excon \
+	rubygem-opentelemetry-instrumentation-faraday>=0.24.6:devel/rubygem-opentelemetry-instrumentation-faraday \
+	rubygem-opentelemetry-instrumentation-grape>=0.2.0:devel/rubygem-opentelemetry-instrumentation-grape \
+	rubygem-opentelemetry-instrumentation-graphql>=0.28.4:devel/rubygem-opentelemetry-instrumentation-graphql \
+	rubygem-opentelemetry-instrumentation-http_client>=0.22.7:devel/rubygem-opentelemetry-instrumentation-http_client \
+	rubygem-opentelemetry-instrumentation-net_http>=0.22.7:devel/rubygem-opentelemetry-instrumentation-net_http \
+	rubygem-opentelemetry-instrumentation-pg>=0.28.0:devel/rubygem-opentelemetry-instrumentation-pg \
+	rubygem-opentelemetry-instrumentation-rack>=0.24.6:devel/rubygem-opentelemetry-instrumentation-rack \
+	rubygem-opentelemetry-instrumentation-rails>=0.31.2:devel/rubygem-opentelemetry-instrumentation-rails \
 	rubygem-opentelemetry-instrumentation-rake>=0.2.1:devel/rubygem-opentelemetry-instrumentation-rake \
-	rubygem-opentelemetry-instrumentation-redis>=0.25.3:devel/rubygem-opentelemetry-instrumentation-redis \
-	rubygem-opentelemetry-instrumentation-sidekiq>=0.25.2:devel/rubygem-opentelemetry-instrumentation-sidekiq \
+	rubygem-opentelemetry-instrumentation-redis>=0.25.7:devel/rubygem-opentelemetry-instrumentation-redis \
+	rubygem-opentelemetry-instrumentation-sidekiq>=0.25.7:devel/rubygem-opentelemetry-instrumentation-sidekiq \
 	rubygem-warning>=1.3.0<1.4:devel/rubygem-warning \
 	rubygem-gitlab-dangerfiles>=4.8.0<4.9:devel/rubygem-gitlab-dangerfiles \
 	rubygem-license_finder>=7.0.0<8:devel/rubygem-license_finder \
@@ -268,8 +269,8 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-net-ntp>0:net/rubygem-net-ntp \
 	rubygem-ssh_data>=1.3<2:security/rubygem-ssh_data \
 	rubygem-spamcheck>=1.3.0<1.4:net/rubygem-spamcheck \
-	rubygem-gitaly>=17.2.0:net/rubygem-gitaly \
-	rubygem-kas-grpc>=0.6.0,1<0.7.0,1:net/rubygem-kas-grpc \
+	rubygem-gitaly>=17.4.0:net/rubygem-gitaly \
+	rubygem-gitlab-kas-grpc>=17.4.0<17.5:net/rubygem-gitlab-kas-grpc \
 	rubygem-grpc>=1.63.0<2:net/rubygem-grpc \
 	rubygem-google-protobuf3>=3.25.3<4:devel/rubygem-google-protobuf3 \
 	rubygem-toml-rb>=2.2.0<3:www/rubygem-toml-rb \
@@ -301,7 +302,7 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-parser>=3.3.0.5:devel/rubygem-parser \
 	rubygem-cvss-suite>=3.0.1<3.1:security/rubygem-cvss-suite \
 	rubygem-arr-pm>=0.0.12<0.1:devel/rubygem-arr-pm \
-	rubygem-devfile>=0.0.26.p.a1<0.0.27:net/rubygem-devfile \
+	rubygem-devfile>=0.0.28.p.a1<0.0.29:net/rubygem-devfile \
 	rubygem-CFPropertyList>=3.0.0<3.1:devel/rubygem-CFPropertyList \
 	rubygem-app_store_connect>=0:net/rubygem-app_store_connect \
 	rubygem-telesignenterprise>=2.2<3:devel/rubygem-telesignenterprise \
@@ -309,6 +310,7 @@ MY_DEPENDS=	git>=2.41.0:devel/git \
 	rubygem-net-http>=0.4.1<0.4.2:www/rubygem-net-http \
 	rubygem-duo_api>=1.3<2:security/rubygem-duo_api \
 	rubygem-gitlab-sdk>=0.3.0<0.4:devel/rubygem-gitlab-sdk \
+	rubygem-paper_trail>=15.0<16:devel/rubygem-paper_trail \
 	rubygem-google-cloud-profiler-v2>=0.3<1:textproc/rubygem-google-cloud-profiler-v2 \
 	rubygem-parallel>=1.22<2:sysutils/rubygem-parallel \
 	rubygem-google-cloud-storage_transfer12>=1.2.0<1.3:net/rubygem-google-cloud-storage_transfer12
@@ -341,7 +343,6 @@ SHEBANG_FILES=	scripts/build_qa_image \
 		scripts/generate-e2e-pipeline \
 		scripts/frontend/execute-on-staged-files.sh \
 		scripts/frontend/start_storybook.sh \
-		scripts/frontend/vite \
 		scripts/partitioning/generate-fk \
 		scripts/validate-monorepo-gem \
 		.lefthook/pre-push/merge_conflicts \
