--- a/www/Makefile
+++ b/www/Makefile
@@ -1640,6 +1640,7 @@
     SUBDIR += py-falcon
     SUBDIR += py-fastapi
     SUBDIR += py-fastapi-users
+    SUBDIR += py-feedgen
     SUBDIR += py-feedgenerator
     SUBDIR += py-flasgger
     SUBDIR += py-flask
